crates/outlap-schema/tests/fixtures/bad/non_si_units.tir
$ SPDX-License-Identifier: CC-BY-SA-4.0
$ SYNTHETIC — exercises the non-SI [UNITS] hard error.
[UNITS]
LENGTH = 'mm'
FORCE  = 'newton'

[DIMENSION]
UNLOADED_RADIUS = 330
